--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,11 @@ proguard/
 
 # Android Studio captures folder
 captures/
+
+*.iml
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
