--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.svs.hztb">
+    package="com.svs.hztb" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"></application>
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".Activities.SplashScreenActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_splash_screen" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".Activities.HomeScreenActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_home_screen" >
+        </activity>
+        <activity
+            android:name=".Activities.MobilePhoneRegistrationActivity"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_mobile_phone_registration" >
+        </activity>
+    </application>
 
 </manifest>
