--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name=".Activities.SplashScreenActivity"
-            android:label="@string/title_activity_splash_screen"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
