--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Activities.SplashScreenActivity"
+            android:name="com.svs.hztb.Activities.SplashScreenActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
             android:screenOrientation="portrait" >
@@ -45,20 +45,24 @@
         <activity
             android:name=".Activities.HomeScreenActivity"
             android:label="@string/title_activity_home_screen"
-            android:screenOrientation="portrait" >
+            android:configChanges="keyboardHidden|orientation"
+            >
         </activity>
         <activity
             android:name=".Activities.RegistrationActivity"
             android:label="@string/title_activity_mobile_phone_registration"
-            android:screenOrientation="portrait" >
+            android:configChanges="keyboardHidden|orientation"
+            >
         </activity>
         <activity
             android:name=".Activities.ConfirmRegistration"
-            android:label="@string/title_activity_confirm_registration" >
+            android:label="@string/title_activity_confirm_registration"
+            android:configChanges="keyboardHidden|orientation">
         </activity>
         <activity
-            android:name=".Activities.SignUpActivity"
-            android:label="@string/title_activity_sign_up" >
+            android:name=".Activities.ProfileActivity"
+            android:label="@string/title_activity_sign_up"
+            android:configChanges="keyboardHidden|orientation">
         </activity>
 
         <receiver
