--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.svs.hztb" >
+    package="com.svs.hztb">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <!-- GCM requires a Google account. -->
@@ -30,12 +30,12 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name="com.svs.hztb.Activities.SplashScreenActivity"
+            android:name=".Activities.SplashScreenActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,26 +44,20 @@
         </activity>
         <activity
             android:name=".Activities.HomeScreenActivity"
-            android:label="@string/title_activity_home_screen"
             android:configChanges="keyboardHidden|orientation"
-            >
-        </activity>
+            android:label="@string/title_activity_home_screen"></activity>
         <activity
             android:name=".Activities.RegistrationActivity"
-            android:label="@string/title_activity_mobile_phone_registration"
             android:configChanges="keyboardHidden|orientation"
-            >
-        </activity>
+            android:label="@string/title_activity_mobile_phone_registration"></activity>
         <activity
             android:name=".Activities.ConfirmRegistration"
-            android:label="@string/title_activity_confirm_registration"
-            android:configChanges="keyboardHidden|orientation">
-        </activity>
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/title_activity_confirm_registration"></activity>
         <activity
             android:name=".Activities.ProfileActivity"
-            android:label="@string/title_activity_sign_up"
-            android:configChanges="keyboardHidden|orientation">
-        </activity>
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/title_activity_sign_up"></activity>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -77,21 +71,24 @@
         </receiver>
         <!-- [END gcm_receiver] -->
         <service
-            android:name="com.svs.hztb.PushNotifications.RegistrationIntentService"
+            android:name=".PushNotifications.RegistrationIntentService"
             android:exported="false" />
         <service
-            android:name="com.svs.hztb.PushNotifications.MyInstanceIDListenerService"
+            android:name=".PushNotifications.MyInstanceIDListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.gms.iid.InstanceID" />
             </intent-filter>
         </service>
         <service
-            android:name="com.svs.hztb.PushNotifications.MyGcmListenerService"
+            android:name=".PushNotifications.MyGcmListenerService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
+
+        <activity android:name=".Activities.CountryCodeActivity"></activity>
     </application>
+
 </manifest>
