--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,6 @@ android {
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
 
     }
     buildTypes {
@@ -32,9 +31,7 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:support-v4:23.3.0'
-    compile 'com.android.support:multidex:1.0.0'
-
     testCompile 'junit:junit:4.12'
 }
