--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
         <activity
             android:name=".Activities.HomeScreenActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/title_activity_home_screen"></activity>
+            android:label="@string/title_activity_home_screen">
+        </activity>
         <activity
             android:name=".Activities.RegistrationActivity"
             android:configChanges="keyboardHidden|orientation"
@@ -57,7 +58,8 @@
         <activity
             android:name=".Activities.ProfileActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/title_activity_sign_up"></activity>
+            android:label="@string/title_activity_sign_up">
+        </activity>
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
