--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,21 +45,19 @@
         <activity
             android:name=".Activities.HomeScreenActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/title_activity_home_screen">
-        </activity>
+            android:label="@string/title_activity_home_screen" />
         <activity
             android:name=".Activities.RegistrationActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/title_activity_mobile_phone_registration"></activity>
+            android:label="@string/title_activity_mobile_phone_registration" />
         <activity
             android:name=".Activities.ConfirmRegistration"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/title_activity_confirm_registration"></activity>
+            android:label="@string/title_activity_confirm_registration" />
         <activity
             android:name=".Activities.ProfileActivity"
             android:configChanges="keyboardHidden|orientation"
-            android:label="@string/title_activity_sign_up">
-        </activity>
+            android:label="@string/title_activity_sign_up" />
 
         <receiver
             android:name="com.google.android.gms.gcm.GcmReceiver"
@@ -90,7 +88,10 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Activities.CountryCodeActivity"></activity>
+        <activity android:name=".Activities.CountryCodeActivity" />
+        <activity
+            android:name=".Activities.RequestOpinionActivity"
+            android:label="@string/title_activity_request_opinion"></activity>
     </application>
 
 </manifest>
