--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <permission
         android:name="com.androidhive.pushnotifications.permission.C2D_MESSAGE"
         android:protectionLevel="signature" />
-
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="com.androidhive.pushnotifications.permission.C2D_MESSAGE" />
 
     <!-- This app has permission to register and receive data message. -->
