workflow for Realm database started

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
+        android:name=".Application.HztbApp"
         android:theme="@style/AppTheme">
         <activity
             android:name=".Activities.SplashScreenActivity"
