--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+plugins {
+    id "org.sonarqube" version "1.2"
+}
 apply plugin: 'com.android.application'
+
+apply plugin: 'jacoco-android'
+
+apply from: '../sonarqube.gradle'
+
+def APP_VERSION = "1.0.0"
+ext.set('AppVersion', APP_VERSION)
 
 android {
     compileSdkVersion 23
@@ -14,6 +24,8 @@ android {
     }
     buildTypes {
         release {
+            testCoverageEnabled true
+
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -22,6 +34,17 @@ android {
         // Don't abort if Lint finds an error, otherwise the Jenkins build
         // will be marked as failed, and Jenkins won't analyse the Lint output
         abortOnError false
+    }
+
+    productFlavors {
+        develop {
+
+        }
+    }
+
+    // see for details: http://tools.android.com/tech-docs/unit-testing-support#TOC-Method-...-not-mocked.-
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
 }
 
@@ -39,4 +62,15 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:8.4.0'
     compile 'com.android.support:support-v4:23.3.0'
     testCompile 'junit:junit:4.12'
+
+}
+
+jacoco {
+    toolVersion = "0.7.5.201505241946"
+}
+
+jacocoAndroidUnitTestReport {
+    csv.enabled false
+    html.enabled true
+    xml.enabled true
 }
