--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,14 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.0.1"
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.1'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-apply plugin: "org.sonarqube"
+
 allprojects {
     repositories {
         jcenter()
